--- a/src/pages/ExtendedCommandPage/ExtendedCommandPage.module.css
+++ b/src/pages/ExtendedCommandPage/ExtendedCommandPage.module.css
@@ -7,5 +7,5 @@
 
 .container > * {
   min-width: 0;
-  max-width: 100%;
+  flex-shrink: 0;
 }
