--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,7 +28,6 @@ html {
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-width: none;
-  max-width: 100vw;
 }
 
 * {
@@ -45,7 +44,6 @@ html::-webkit-scrollbar {
 
 body {
   min-height: 100vh;
-  max-width: 100vw;
   overflow-x: hidden;
   position: relative;
   background: var(--body-bg);
